# lg

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  violations.md
src/: app.rs  config.rs  git.rs  graph.rs  lib.rs  llm.rs  main.rs  ollama.rs  state.rs  ui.rs
src/app/: actions.rs  footer.rs  header.rs  input.rs  jobs.rs  mouse.rs  refresh.rs  render.rs  review_assist.rs  spawn.rs  workflow.rs
src/git/: config.rs  diff.rs  flow.rs  review.rs  status.rs
src/git/review/: source.rs
src/panel/: author.rs  branches.rs  commit.rs  commits.rs  conflict.rs  delete_branch.rs  environments.rs  files.rs  flow.rs  help.rs  main.rs  markdown.rs  mod.rs  model.rs  push.rs  review_chat.rs  scroll.rs  stage_all.rs  status.rs
src/panel/main/: review.rs  source.rs
src/state/: jobs.rs  tree.rs
src/ui/: chrome.rs  diff.rs  layout.rs  log.rs
tests/: e2e.rs  git_integration.rs  tui_flow.rs  visual_smoke.rs
tests/tui_flow/: commit_diff_scroll.rs  commits_graph.rs  common.rs  focus_branches_flow.rs  navigation.rs  rendering_status_tree_push_layout.rs  review_diff_author.rs
