[package]
name = "lg"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[profile.dev]
debug = 1

[dependencies]
ratatui    = "0.30"
reqwest    = { version = "0.13", features = ["blocking", "json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
anyhow     = "1"
notify     = "8"
tempfile   = "3"

[dev-dependencies]
